--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-material-ui": "^1.22.3",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "underscore": "^1.9.1"
   }
 }
